tests/baselines/reference/parserComputedPropertyName36.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts(2,6): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts(2,13): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts(2,14): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts (3 errors) ====
    class C {
        [public ]: string;
         ~~~~~~
!!! error TS1109: Expression expected.
                ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                 ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }